# ai-core

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.cursor/rules/: platform-coordination.mdc
.github/workflows/: ci.yml  tests.yml
.platform-control/: capabilities.yaml  commands.yaml  policies.yaml  project.yaml
docs/: 2026-07-16-platform-alignment-addendum.md  ACCEPTANCE.md  PLAN.md  STATUS.md
docs/handoffs/: 2026-07-16-ai-core-v010-v020-validation.md
examples/: smoke_span.py
src/ai_core/: __init__.py  attributes.py  config.py  io_policy.py  json_client.py  models.py  provider_factory.py  safe_attributes.py  tracing.py
tests/: test_attributes.py  test_config.py  test_io_policy.py  test_json_client.py  test_provider_factory.py  test_safe_attributes.py  test_tracing.py
