[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-core"
version = "0.1.0"
description = "Shared Phoenix tracing config and IO policy for multi-project AI observability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arize-phoenix-otel",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "langchain-core",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
