[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-core"
version = "0.2.0"
description = "Shared Phoenix tracing config and IO policy for multi-project AI observability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arize-phoenix-otel",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "langchain-core==1.4.9",
    "langchain-ollama==1.1.0",
    "langchain-mistralai==1.1.6",
    "langchain-openai==1.3.5",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
